updated crest landing page

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -197,9 +197,29 @@ th {
   used under CC BY http://creativecommons.org/licenses/by/4.0/
   Modified icons to fit ionicon’s grid from original.
 */
+
+#skip a
+{
+position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;
+}
+ 
+#skip a:focus
+{
+position:static;
+width:auto;
+height:auto;
+}
+
 section.currently-supports p img {
     border-radius: 50%;
-    width: auto
+    width: auto;
+    height: 250px;
+
 }
 @font-face {
     font-family: "Ionicons";
